# quadratic-stable-opinf

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yml  mkdocs.yml  pyproject.toml  run_examples.sh
.devcontainer/: devcontainer.json
.github/workflows/: pre-commit.yml
Examples/: Example_Burgers_Dirichilet_Stability_order.py  Example_Burgers_Dirichilet_Stability_reg.py  Example_Burgers_Neumann_Stability_order.py  Example_Burgers_Neumann_Stability_reg.py  Example_Burgers_Stability.py  Example_Chafee_Stability.py  Example_Lorenz.py  Example_MHD.py
Examples/data/: Burger_data_init_condions.mat  Burgers_dirichilet_data.mat  Chafee_data_inits_conditions.mat  burgers_data_Neumann.mat
Examples/plotting/: Plotting_Burgers_Dirichilet_orders.ipynb  Plotting_Burgers_Dirichilet_reg.ipynb  Plotting_Burgers_Neumann_orders.ipynb  Plotting_Chafee.ipynb
docs/: index.md
docs/examples/: Example_Lorenz.ipynb
src/Examples/: Example_Lorenz.py
src/qs_opinf/: constants.py  module_models.py  module_training.py  utils.py
